fix btn alignment

--- a/main.css
+++ b/main.css
@@ -58,7 +58,7 @@ a {
 
 .btn {
   display: inline-block;
-  margin: 5px;
+  margin: 5px 0;
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #e2ded3;
